@@ -32,6 +32,7 @@
 - Fix: [#22265] Button for switching covered tracks on slides doesn’t stay pressed.
 - Fix: [#22284] Unrated rides cause high amount of nausea.
 - Fix: [#22304] Graphs don’t draw lines on the left edge of the screen.
+- Fix: [#22308] OpenGL draws lines incorrectly in some cases.
 - Fix: [#22318] Water sparkles are missing if transparent water is enabled without RCT1 linked.
 - Fix: [#22333] Tile inspector closes other tool windows.
 - Fix: [#22339] Printing ui.tool.cursor in console crashes the game.
